update dog
