# model/entities/dog.py
@@ -1,4 +1,5 @@
 import bcrypt
+from model.DTOs.dog_dto import DogDTO
 from model.core.dog_setup import DogSetup
 from model.core.user_setup import UserSetup
 from infrastructure.database.base_setup import BaseSetup
@@ -18,8 +19,13 @@ class Dog(Entity):
         self.user_id = user_id
         
     def add(self):
-    
         BaseSetup.insert(DOG_TABLE, self)
+    
+    def update(self):
+        
+        updated_dog = DogDTO(self.id, self.name, self.race, self.age, self.gender, self.color, self.user_id)  
+        
+        DogSetup.update(updated_dog)
 
     def list(user_id: str):
         return DogSetup.view(user_id)
